--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_secure_storage: ^4.2.0
+  dio: ^4.0.6
   flutter_svg: ^1.0.0
   provider: ^4.3.1
   flutter_barcode_scanner: ^2.0.0
   equatable: ^2.0.3
-  cloud_firestore: ^3.1.6
-  firebase_core: ^1.11.0
+#  cloud_firestore: ^3.1.6
+#  firebase_core: ^1.11.0
 
 
 
