--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^4.3.1
   flutter_barcode_scanner: ^2.0.0
   equatable: ^2.0.3
+  flutter_credit_card: ^3.0.1
 #  cloud_firestore: ^3.1.6
 #  firebase_core: ^1.11.0
 
