--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   equatable: ^2.0.3
   flutter_credit_card: ^3.0.1
+  intl: ^0.17.0
+  flutter_stripe: ^3.1.0
+#  country_picker: ^2.0.15
+  country_pickers: ^2.0.0
 #  cloud_firestore: ^3.1.6
 #  firebase_core: ^1.11.0
 
